src/objects/Fielo_MedioDePagoVenta__c.object
<CustomObject>
    <fields>
        <fullName>F_CodigoVoucher__c</fullName>
        <label>Código Voucher</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_MedioDePago__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medio de Pago</label>
        <referenceTo>Fielo_MedioDePago__c</referenceTo>
        <relationshipLabel>Medios de Pago Venta</relationshipLabel>
        <relationshipName>Medios_de_Pago_Venta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_MillasRedimidas__c</fullName>
        <label>Millas Redimidas</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_Monto__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_PINLifeMiles__c</fullName>
        <label>PIN LifeMiles</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_RedemptionItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption Item</label>
        <referenceTo>FieloPLT__RedemptionItem__c</referenceTo>
        <relationshipLabel>Medios de Pago Venta</relationshipLabel>
        <relationshipName>Medios_de_Pago_Venta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_Venta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venta</label>
        <referenceTo>Fielo_Venta__c</referenceTo>
        <relationshipLabel>Medios de Pago Venta</relationshipLabel>
        <relationshipName>Medios_de_Pago_Venta</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Medio de Pago Venta</label>
    <nameField>
        <displayFormat>MPV-{0000000000}</displayFormat>
        <label># MP Venta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medios de Pago Venta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>